fix for wrong font size in restaurant pages

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -53,7 +53,7 @@
 }
 
 .zoom img {
-  transition: all 0.5s;
+  transition: all 0.3s;
 }
 .zoom:hover img {
   transform: scale(1.5);
@@ -524,6 +524,9 @@ body {
 .menu__list-section {
   gap: 12px;
   width: 100%;
+}
+.menu__list-section-title {
+  font-size: 16px;
 }
 .menu__list-cards {
   width: 100%;
