--- a/styles/pages/_restaurant.scss
+++ b/styles/pages/_restaurant.scss
@@ -45,6 +45,9 @@
     &-section {
       gap: 12px;
       width: 100%;
+      &-title{
+        font-size: 16px;
+      }
     }
     &-cards {
       width: 100%;
